[package]
name = "pbs_cmds"
version = "0.0.2-beta"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "CLI for interacting with a PBS server"
repository = "https://github.com/Will-Shanks/pbs_cmds"

[dependencies]
pbs = { path = "../pbs" }
clap = { version = "4.0", features=["derive"]}
env_logger = "0.10"
log = "0.4"
hostlist-parser = "0.1"
serde_json = "1"
